# host-certs

./: .gitignore  CLAUDE_CLI_FIX.md  Dockerfile  EXE_DISTRIBUTION_README.md  LICENSE  README.md  build-exe.ps1  build_entry.py  collect_certs.py  debug_temp.py  dev_utils.py  pyproject.toml  requirements.txt  version_info.txt
src/corp_certs/: __init__.py  main.py
src/host_certs/: collector.py  collector_full.py  main.py
src/windows_cert_collector/: collector.py  collector_full.py  main.py
src/windows_cert_collector/docker/: Dockerfile
src/windows_cert_collector/scripts/: test-connectivity.sh
