[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "host-certs"
version = "2.1.0"
description = "A Windows certificate collection tool for Docker containers and enterprise environments"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["certificates", "windows", "docker", "ssl", "tls", "enterprise"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Build Tools",
]
requires-python = ">=3.8"
dependencies = [
    "wincertstore>=0.2",
    "cryptography>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "ruff>=0.1.0",
    "mypy>=0.991",
]

[project.urls]
Homepage = "https://github.com/canmet-energy/host-certs"
Documentation = "https://github.com/canmet-energy/host-certs#readme"
Repository = "https://github.com/canmet-energy/host-certs.git"
"Bug Tracker" = "https://github.com/canmet-energy/host-certs/issues"

[project.scripts]
collect-certs = "host_certs.main:main"
win-cert-collector = "host_certs.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/host_certs"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "README.md",
    "pyproject.toml",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=host_certs --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
]
